--- a/frontend/src/app/core/layout/header/header.component.html
+++ b/frontend/src/app/core/layout/header/header.component.html
@@ -1,25 +1,40 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button [routerLink]="['/']" aria-label="Home">
-    <mat-icon>school</mat-icon>
-  </button>
-  <span>UniHub - Professor Evaluation</span>
-  <span class="spacer"></span>
-
-  <ng-container *ngIf="!currentUser">
-    <button mat-button [routerLink]="['/login']">Login</button>
-    <button mat-button [routerLink]="['/register']">Register</button>
-  </ng-container>
-
-  <ng-container *ngIf="currentUser">
-    <button mat-button [matMenuTriggerFor]="userMenu">
-      <mat-icon>account_circle</mat-icon>
-      {{ currentUser.username }}
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand d-flex align-items-center" [routerLink]="['/']">
+      <i class="bi bi-mortarboard-fill me-2"></i>
+      UniHub
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+            aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <mat-menu #userMenu="matMenu">
-      <button mat-menu-item [routerLink]="['/profile']">Profile</button> <!-- Assuming a profile page -->
-      <button mat-menu-item *ngIf="isAdmin" [routerLink]="['/admin']">Admin Dashboard</button>
-      <button mat-menu-item (click)="logout()">Logout</button>
-    </mat-menu>
-  </ng-container>
 
-</mat-toolbar> 
+    <div class="collapse navbar-collapse" id="navbarMain">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ng-container *ngIf="!currentUser">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/register']">Register</a>
+          </li>
+        </ng-container>
+
+        <ng-container *ngIf="currentUser">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown" role="button"
+               data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle me-1"></i> {{ currentUser.username }}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+              <li><a class="dropdown-item" [routerLink]="['/profile']">Profile</a></li>
+              <li *ngIf="isAdmin"><a class="dropdown-item" [routerLink]="['/admin']">Admin Dashboard</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><button class="dropdown-item" (click)="logout()">Logout</button></li>
+            </ul>
+          </li>
+        </ng-container>
+      </ul>
+    </div>
+  </div>
+  </nav>
